Closed Bug 1368335 Opened 8 years ago Closed 8 years ago

Crash [@ IdleRequestExecutor::MaybeDispatch ] | Assertion failure: mRawPtr != nullptr (You can't dereference a NULL RefPtr with operator->().)

Categories

(Core :: DOM: Core & HTML, defect)

55 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: bc, Assigned: farre)

References

Details

(Keywords: assertion, crash)

Crash Data

Attachments

(2 files)

1. http://www.immobiliare.it/Roma/viale_del_tintoretto-Roma-case_appartamenti 2. Assertion failure: mRawPtr != nullptr (You can't dereference a NULL RefPtr with operator->().), at /mozilla/builds/nightly/mozilla/firefox-debug/dist/include/mozilla/RefPtr.h:315 #01: nsGlobalWindow::ExecuteIdleRequest [dom/base/nsGlobalWindow.cpp:870] #02: nsThread::ProcessNextEvent [mfbt/Maybe.h:445] #03: NS_ProcessNextEvent [xpcom/threads/nsThreadUtils.cpp:472] #04: mozilla::ipc::MessagePump::Run [ipc/glue/MessagePump.cpp:97] #05: MessageLoop::RunInternal [ipc/chromium/src/base/message_loop.cc:239] #06: MessageLoop::Run [ipc/chromium/src/base/message_loop.cc:505] #07: nsBaseAppShell::Run [widget/nsBaseAppShell.cpp:158] #08: nsAppStartup::Run [toolkit/components/startup/nsAppStartup.cpp:284] #09: XREMain::XRE_mainRun [toolkit/xre/nsAppRunner.cpp:4569] #10: XREMain::XRE_main [toolkit/xre/nsAppRunner.cpp:4748] #11: XRE_main [toolkit/xre/nsAppRunner.cpp:4843] #12: do_main [browser/app/nsBrowserApp.cpp:236] #13: main [browser/app/nsBrowserApp.cpp:311] #14: libc.so.6 + 0x20401 #15: _start ExceptionHandler::GenerateDump cloned child 20867 ExceptionHandler::SendContinueSignalToChild sent continue signal to child ExceptionHandler::WaitForContinueSignal waiting for continue signal... or Crash [@ IdleRequestExecutor::MaybeDispatch ] bp-8ee16569-2646-4470-8110-01acf0170528 and others. *Not* a dupe of bug 1336229. Still reproduces on 55 Linux/Windows at least.
Crash Signature: [@ IdleRequestExecutor::MaybeDispatch ]
Assignee: nobody → afarre
Comment on attachment 8872331 [details] [diff] [review] 0001-Bug-1368335-Don-t-dispatch-idle-executor-when-window.patch >- mIdleRequestExecutor->MaybeDispatch(); >+ // Running the idle callback could've suspended the window, in which >+ // case mIdleRequestExecutor will be null. >+ if (!IsSuspended()) { >+ mIdleRequestExecutor->MaybeDispatch(); >+ } I think I'd prefer just null check here, but the comment is fine.
Attachment #8872331 - Flags: review?(bugs) → review+
Attachment #8872333 - Flags: review?(bugs) → review+
Pushed by afarre@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/40669ce64bf7 Don't dispatch idle executor when window has suspended. r=smaug https://hg.mozilla.org/integration/mozilla-inbound/rev/7cbe2db1830c Add test for idle dispatch after global window suspend. r=smaug
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: