Bug 1368335 - Don't dispatch idle executor when window has suspended. r=smaug